force-app/main/default/objects/ATG_Custom_Settings__c/ATG_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ATG Custom Settings</label>
</CustomObject>