force-app/main/default/objects/ATG_Custom_Settings__c/fields/Contract_Subscription_Agreement__c.field-meta.xml
<CustomField>
        <fullName>Contract_Subscription_Agreement__c</fullName>
        <description>Contract Record Type ID for CRT Addendums</description>
        <label>CPQ Agreement</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>