force-app/main/default/objects/ATG_Custom_Settings__c/fields/CRT_Addendum__c.field-meta.xml
<CustomField>
        <fullName>CRT_Addendum__c</fullName>
        <label>CRT Addendum</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>