force-app/main/default/objects/ATG_Custom_Settings__c/fields/Default_Pricebook__c.field-meta.xml
<CustomField>
        <fullName>Default_Pricebook__c</fullName>
        <label>Default Pricebook</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>