force-app/main/default/objects/ATG_Custom_Settings__c/fields/Guided_Selling_Quote_Process__c.field-meta.xml
<CustomField>
        <fullName>Guided_Selling_Quote_Process__c</fullName>
        <description>Quote Process ID for Guided Selling</description>
        <inlineHelpText>Quote Process ID for Guided Selling</inlineHelpText>
        <label>Guided Selling Quote Process</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>